<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThermostatApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_temperature">23.1</string>
    <string name="str_celcius_unit">&#x2103;</string>
    <string name="str_farenheit_unit">F</string>
    <string name="str_date"> 21 June 2014</string>
    <string name="str_day">Saturday</string>
    <string name = "str_time"> 10:30 h</string>
    <string name="str_next_switch">Next switch:</string>
    <string name="str_nswitch_time"> 13:00 h </string>
    <string name="str_SunIcon"> Day temperature</string>
    <string name="str_MoonIcon"> Night temperature</string>
    <string name="str_upArrow"> Increase current temperature</string>
    <string name="str_downArrow"> Decrease current temperature</string>
    <string name="str_manualToggle"> M </string>
    <string name="str_vacationToggle"> V </string>

    <color name="dark_gray">#ff333333</color>
    <color name="light_gray">#aa666666</color>
    <color name="black">#ff000000</color>
    <color name="holo_dark_blue">#ff1095dd</color>
    <color name="white"> #ffffffff</color>

    <string name="title_activity_week_program_acitivity">WeekProgramAcitivity</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    
    <string name="Two">Night</string>
    <string name="Three">Overview</string>

</resources>
